# agent-browser

./: AGENT-BROWSER.md  CHANGELOG.md  package.json
.changeset/: release-1845d1cb.md
cli/: Cargo.toml
docs/src/app/cdp-mode/: page.tsx
docs/src/app/changelog/: page.tsx
docs/src/app/commands/: page.tsx
docs/src/app/sessions/: page.tsx
skills/agent-browser/: SKILL.en.md  SKILL.md
src/: actions.ts  browser.ts
